[package]
name = "tendrilo"
version = "0.1.0"
authors = ["kciryt <tyrick@gmail.com>"]

[dependencies]
time = "0.1.12"
chrono = "0.4.0"
bincode = "0.9.2"
serde_derive = "1.0.27"
serde = "1.0.27"
hex = "0.3.1"
regex = "0.1.41"
rustc-serialize = "0.3"
rust-crypto = "0.2.34"
mio = "0.5"
bytes = "0.2.11"
rand = "0.3"
byteorder = "1.2.1"
